--- a/index.html
+++ b/index.html
@@ -1,52 +1,37 @@
-<html>
-<head>
-	<title> Resume </title>
-<body>
-	<div>
-		<center> <u> <h1 style="color:red"><b> Resume </b> </u> </center>
-	</div>
-	<hr>
-	<p> <h3> Name: Manan Mehta </h3> <p>
-	<p> <h3> Address: 943-B, 10th D Road, Sardarpura, Jodhpur, Rajasthan </h3> <p>
-	<p> <h3> Mobile Number: 8306070985 </h3> <p>
-	<p> <h3> Email ID: mananmehta108@gmail.com </h3> <p>
-	<u> <h2 style="color:black"><b> PERSONAL DETAILS </b> </u>
-	<div>
-	<ul>
-		<li> Date of Birth: 11 May, 2003 </li>
-		<li> Sex: Male </li>
-		<li> Nationality: Indian </li>
-		<li> Language Known: English and Hindi </li>
-	</ul>
-	</div>
-	<div>
-	<p> <u> <h2> <b> Career Objective </b> </h2> </u> </p>
-	<p> <i> To be a part of an organization where I can devote myself fully and joyfully give out best of my talents and skills to become in strong asset. </i></p>
-	</div>
-	<div>
-	<p> <u> <h2> <b> Education Qualificaton </b> </h2> </u> </p>
-	<p> <i> I have completed my class 10th from St. Anne's School with 81% and my class 12th from Sardar Doon Public School with 80%. </i> </p>
-	</div>
-	<div>
-	<p> <u> <h2> <b> Strength </b> </h2> </u> </p>
-	<ul>
-		<li> Punctuality </li>
-		<li> Hard Working </li>
-		<li> Creative </li>
-		<li> Passionate </li>
-	</ul>
-	</div>
-	<div>
-	<p> <u> <h2> <b> Hobbies </b> </h2> </u> </p>
-	<ul>
-		<li> Listening Music </li>
-		<li> Watching Movies </li>
-		<li> Playing Cricket </li>
-		<li> Playing Badminton </li>
-	</ul>
-	</div>
-	<hr>
-	<center> <p> I declare that the above information is true to the best of my knowledge. </p> </center>
-	<p> Thank You </p>
-</body>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Assignment1</title>
+  </head>
+  <body>
+    <div>
+      <center>
+        <h1><b>Assignment 1</b></h1>
+        <h1><b>MINAL SHARMA</b></h1>
+      </center>
+    </div>
+  </div>
+  <div style="background-color:lightgrey;">
+      <h2><marquee behavior="slide" direction="right">BLOGGING</marquee></h2>
+      <h2><marquee behavior="slide" direction="left"> BLOGGING</marquee></h2>
+  </div>
+    <div>
+      <h2>CYBER SECURITY</h2>
+      <p><i>Cyber security is the practice of<b> defending computers, servers, mobile devices, electronic systems, networks, and data</b> from malicious attacks. It's also known as information technology security or electronic information security. The term applies in a variety of contexts, from business to mobile computing, and can be divided into a few common categories.</i></p>
+      <p><i> Network security is the practice of securing a computer network from intruders, whether targeted attackers or opportunistic malware. Application security focuses on keeping software and devices free of threats. A <b>compromised application</b> could provide access to the data its designed to protect. Successful security begins in the design stage, well before a program or device is deployed.Information security protects the integrity and privacy of data, both in storage and in transit. Operational security includes the processes and decisions for handling and protecting data assets. The permissions users have when accessing a network and the procedures that determine how and where data may be stored or shared all fall under this umbrella.</i></p>
+      <hr>
+      <h3>For More information</h3>
+      <a href="https://www.kaspersky.co.in/resource-center/definitions/what-is-cyber-security"><button style="background-color:violet;" name="button">Click Here</button></a>
+   </div>
+   <div class="column">
+     <img src="https://images.alphacoders.com/156/thumb-1920-156893.jpg" alt="pic 1"height="250",width="250">
+     <img src="image/minal2.jpeg" alt="pic2"height="250"width="250">
+   </div>
+   <div class="column">
+     <a href="https://www.google.co.in/"><button style="background-color:red;">For Google</button></a>
+     <a href="https://in.search.yahoo.com/?fr2=inr"><button style="background-color:yellow;">For Yahoo</button></a>
+
+   </div>
+  </body>
 </html>
