--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Assignment1</title>
   </head>
   <body>
-    <div>
+    <!-- <div> -->
       <center>
         <h1><b>Assignment 1</b></h1>
         <h1><b>MINAL SHARMA</b></h1>
@@ -21,17 +21,24 @@
       <p><i>Cyber security is the practice of<b> defending computers, servers, mobile devices, electronic systems, networks, and data</b> from malicious attacks. It's also known as information technology security or electronic information security. The term applies in a variety of contexts, from business to mobile computing, and can be divided into a few common categories.</i></p>
       <p><i> Network security is the practice of securing a computer network from intruders, whether targeted attackers or opportunistic malware. Application security focuses on keeping software and devices free of threats. A <b>compromised application</b> could provide access to the data its designed to protect. Successful security begins in the design stage, well before a program or device is deployed.Information security protects the integrity and privacy of data, both in storage and in transit. Operational security includes the processes and decisions for handling and protecting data assets. The permissions users have when accessing a network and the procedures that determine how and where data may be stored or shared all fall under this umbrella.</i></p>
       <hr>
+      <dl>
+        <dt>Cyber security includes-</dt>
+        <dd>Cyber Defence</dd>
+        <dd>Cyber Ethics</dd>
+        <dd>Cyber Law</dd>
+      </dl>
       <h3>For More information</h3>
       <a href="https://www.kaspersky.co.in/resource-center/definitions/what-is-cyber-security"><button style="background-color:violet;" name="button">Click Here</button></a>
+      
    </div>
-   <div class="column">
+   <div class="column1">
      <img src="https://images.alphacoders.com/156/thumb-1920-156893.jpg" alt="pic 1"height="250",width="250">
      <img src="image/minal2.jpeg" alt="pic2"height="250"width="250">
    </div>
    <div class="column">
      <a href="https://www.google.co.in/"><button style="background-color:red;">For Google</button></a>
      <a href="https://in.search.yahoo.com/?fr2=inr"><button style="background-color:yellow;">For Yahoo</button></a>
-
+     
    </div>
   </body>
 </html>
