--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Assignment1</title>
+    <style>
+      img{
+        border-width: 5px;
+        border-color: antiquewhite red blue violet;
+      }
+    </style>
   </head>
   <body>
     <!-- <div> -->
@@ -33,7 +39,7 @@
    </div>
    <div class="column1">
      <img src="https://images.alphacoders.com/156/thumb-1920-156893.jpg" alt="pic 1"height="250",width="250">
-     <img src="image/minal2.jpeg" alt="pic2"height="250"width="250">
+     <img src="C:\Users\91946\Pictures\minal2.jpeg"" alt="pic2"height="250"width="250">
    </div>
    <div class="column">
      <a href="https://www.google.co.in/"><button style="background-color:red;">For Google</button></a>
